<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_background"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BMITextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_text_view"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/extra_small_gap"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:backgroundTint="@color/card_background"
        android:layout_marginTop="@dimen/small_gap"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:elevation="@dimen/card_elevation"
        app:cardMaxElevation="@dimen/card_corner_radius"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WeightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_text_view"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/big_gap"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginEnd="@dimen/big_gap"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/big_gap"
            android:layout_marginEnd="@dimen/big_gap">

            <EditText
                android:id="@+id/weightParameterEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/extra_large_text_size"
                android:textStyle="bold"
                android:hint="@string/weight_hint"
                android:textColorHint="@color/text_hint"
                android:inputType="numberDecimal"
                android:layout_marginTop="@dimen/medium_gap"
            />

            <TextView
                android:id="@+id/WeightParameterTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/parameter_weight_text_view"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/medium_gap"
                />

        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Finalización de primera cardview -->

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:backgroundTint="@color/card_background"
        android:layout_marginTop="@dimen/small_gap"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:elevation="@dimen/card_elevation"
        app:cardMaxElevation="@dimen/card_corner_radius"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HeightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_text_view"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/big_gap"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginEnd="@dimen/big_gap"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginEnd="@dimen/big_gap">

                <EditText
                    android:id="@+id/heightParameterEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/extra_large_text_size"
                    android:textStyle="bold"
                    android:hint="@string/Height_hint"
                    android:textColorHint="@color/text_hint"
                    android:inputType="numberDecimal"
                    android:layout_marginTop="@dimen/medium_gap"
                    />

                <TextView
                    android:id="@+id/HeightParameterTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/height_parameter_text_view"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingTop="@dimen/medium_gap"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Finalización de segunda cardview -->

    <Button
        android:id="@+id/action_calculate"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:backgroundTint="@color/btn_background"
        android:textStyle="bold"
        android:textSize="@dimen/action_text_size"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/small_gap"
        />

    <!-- Finalización de Boton -->

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/small_card_heigth"
        android:backgroundTint="@color/card_background"
        android:layout_marginTop="@dimen/small_gap"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:elevation="@dimen/card_elevation"
        app:cardMaxElevation="@dimen/card_corner_radius"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/bmiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/extra_large_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/conditionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>